# lsquic-vpn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cert.c  cert.h  cmd.c  cmd.h  common.c  common.h  config.h  config.h.in  echo_client.c  echo_server.c  http_client.c  http_server.c  nixos-plasma5-23.11.7237.46397778ef1f-x86_64-linux.iso  os.c  os.h  prog.c  prog.h  test_client.sh  test_cmd.c  test_server.sh  vpn.c  vpn.h  vpn_client.c  vpn_client.conf  vpn_server.c  vpn_server.conf
.github/workflows/: cmake-multi-platform.yml
certs/: ca-cert-p12.base64  ca-cert.crt  ca-cert.p12  ca-cert.srl  ca-key.pem  client.crt  client.csr  create.sh  server.crt  server.csr
certs/conf/: https.ext  openssl.conf  server-openssl.conf
